--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <img src="images/cherry_blossom_small.jpg" height="150" alt="">
   <h1>Dani's first page</h1>
-  <p><em>Managin tech scout activity in Israel for <strong>LG group</strong> </em></p>
-  <p>I like playing music and run.</p>
-  <p>Also, learining more languages when ever it is possible</p>
+  <p><em>Managing tech scout activity  <strong>XYZ group</strong> </em></p>
+  <p>I like playing music (Tenor Sax), Woodworking and Jogging.</p>
+  <p>Also, trying to learn more languages when ever it is possible</p>
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Ben Zvi promary school</li>
-    <li>Ramle-Lod high school</li>
-    <li>Tel Aviv univ.</li>
+    <li>BZ primary school</li>
+    <li>RLD high school</li>
+    <li>TLV univ.</li>
   </ul>
   <h3>Hobbies</h3>
   <ol>
