general sites links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images/cherry_blossom_small.jpg" height="150" alt="">
+  <img src="images/Cherry_blossom_small.jpg" height="150" alt="">
   <h1>Dani's first page</h1>
   <p><em>Managing tech scout activity  <strong>XYZ group</strong> </em></p>
   <p>I like playing music (Tenor Sax), Woodworking and Jogging.</p>
@@ -21,9 +21,9 @@
   </ul>
   <h3>Hobbies</h3>
   <ol>
-    <li><a href="https://www.youtube.com/watch?v=3_15sZ20RZA">Music</a></li>
+    <li><a href="https://youtu.be/TzyraAp3jaY">Music</a></li>
     <li><a href="https://www.youtube.com/channel/UCXRNHTVpEdhz9BIvomETGiQ">Woodworking</a></li>
-    <li><a href="http://www.mmrunning.com/teams.asp">Running</a></li>
+    <li><a href="https://www.runnersworld.com/running-tips/">Running</a></li>
   </ol>
   <hr>
   <h3>Skills</h3>
